# slr-rag-automation

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  USAGE.md  app.py  build_index.py  config.py  conftest.py  demonstration.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/sample/: README.md  example_output.json  paper_list.json
data/sample/txt/: 2108.06279.txt  2210.09877.txt  2301.05508.txt  2309.15217.txt  2401.15391.txt  2402.12317.txt  2403.13468.txt  2406.18960.txt  2410.20724.txt  2411.18583.txt  2412.16708.txt  2504.05181.txt  2504.14891.txt  2504.17137.txt  2505.04680.txt  2506.06962.txt  2507.23334.txt  2601.05264.txt  2601.19535.txt  2602.20735.txt  2605.00529.txt  2605.01664.txt  2606.01240.txt  2606.10381.txt  2606.13249.txt  2606.13550.txt  2606.16409.txt  2606.21553.txt  2606.26458.txt  2606.29328.txt  2606.30093.txt  2607.00052.txt
scripts/: run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.sh
src/: __init__.py
src/evaluation/: __init__.py  citations.py  compare.py  grounding.py  metrics.py  normalize.py  normalizers.py
src/indexing/: __init__.py  chunker.py  corpus.py  embedder.py  vector_store.py
src/llm/: __init__.py  client.py  parsing.py  prompts.py
src/retrieval/: __init__.py  retriever.py
src/tasks/: __init__.py  extraction.py  screening.py  synthesis.py
static/: index.html
tests/: test_audit_fixes.py  test_chunker.py  test_metrics_guards.py  test_parsing.py  test_screening_decision.py  test_synthesis_diversity.py
