[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slr-rag"
version = "1.1.0"
description = "Open, traceable retrieval-augmented pipeline for systematic-literature-review automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ekrem Sarı" },
  { name = "Murat Paşa Uysal" },
]
keywords = [
  "systematic-literature-review",
  "retrieval-augmented-generation",
  "large-language-models",
  "research-software",
  "provenance",
  "citation-verification",
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "sentence-transformers==5.5.1",
  "chromadb==1.5.9",
  "numpy==2.4.6",
  "rank-bm25==0.2.2",
  "requests==2.34.2",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "fastapi==0.136.3",
  "uvicorn==0.48.0",
  "reportlab==4.5.1",
  "python-multipart==0.0.29",
  "pymupdf==1.27.2.3",
  "feedparser==6.0.12",
]

[project.urls]
Repository = "https://github.com/sariekr/slr-rag-automation"

# Layout: app.py, config.py, build_index.py are top-level modules at the repo root;
# the library lives in the src/ package (each subdirectory has an __init__.py).
[tool.setuptools]
py-modules = ["app", "config", "build_index"]

[tool.setuptools.packages.find]
include = ["src*"]
